--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
 	"version": 2,
 	"public": false,
-	"builds": [{ "src": "main.py", "use": "@vercel/python" }],
+	"builds": [{ "src": "app.py", "use": "@vercel/python" }],
 	"routes": [
-		{ "src": "/", "dest": "main.py" },
-		{ "src": "/docs", "dest": "main.py" },
-		{ "src": "/openapi.json", "dest": "main.py" }
+		{ "src": "/", "dest": "app.py" },
+		{ "src": "/docs", "dest": "app.py" },
+		{ "src": "/openapi.json", "dest": "app.py" }
 	]
 }
